--- a/course-project/package.json
+++ b/course-project/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "joi": "^17.4.1",
+    "lodash": "^4.17.21",
     "mongoose": "^5.13.3"
   }
 }
