--- a/course-project/package.json
+++ b/course-project/package.json
@@ -12,9 +12,11 @@
     "bcrypt": "^5.0.1",
     "config": "^3.3.6",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "joi": "^17.4.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^5.13.3"
+    "mongoose": "^5.13.3",
+    "winston": "^3.3.3"
   }
 }
