--- a/course-project/package.json
+++ b/course-project/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.13.3",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "winston-mongodb": "^3.0.0"
   }
 }
