--- a/course-project/package.json
+++ b/course-project/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll --vervose"
+    "test": "jest --watchAll"
   },
   "author": "",
   "license": "ISC",
@@ -19,5 +19,9 @@
     "mongoose": "^5.13.3",
     "winston": "^3.3.3",
     "winston-mongodb": "^3.0.0"
+  },
+  "devDependencies": {
+    "jest": "^27.0.6",
+    "supertest": "^6.1.4"
   }
 }
